fixing more contrast issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,7 @@
   /* Color pallete */
   --black : black;
   --white : white;
-  --aqua : rgb(23, 183, 207);
+  --aqua : rgb(0, 160, 185);
   --aqua-fade: rgba(240, 248, 255, 0.585);
 
   /*- Typography -*/
